--- a/app/src/view-editor.html
+++ b/app/src/view-editor.html
@@ -54,7 +54,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             }
         </style>
 
-        <homecon-web-socket-object id="websocketPagesList" cmd="list_pages" data="{{pagesList}}" auto></homecon-web-socket-object>
+        <homecon-web-socket-object id="websocketPagesList" event="list_pages" data="{{pagesList}}" auto></homecon-web-socket-object>
 
         <homecon-page>
             <homecon-page-header title="Editor" icon="pagebuilder_pagebuilder"></homecon-page-header>
