--- a/app/src/view-login.html
+++ b/app/src/view-login.html
@@ -93,7 +93,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 window.homeconWebSocket.openSettings()
             },
             requestToken: function(){
-                window.homeconWebSocket.send({'cmd':'request_token','username':this.username,'password':this.password})
+                window.homeconWebSocket.send({'event':'request_token','username':this.username,'password':this.password})
 
                 // clear the password and username from memory
                 this.username = '';
