updated pages css properties to make edit dialog visible

--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -101,7 +101,7 @@
                 margin-top: 64px;
                 background-color: var(--secondary-background-color);
                 box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.3);
-                overflow-y: auto;
+                overflow-y: scroll;
                 -webkit-overflow-scrolling: touch;
             }
 
@@ -115,8 +115,6 @@
                 bottom: 0;
                 width: 40%;
                 z-index: 2;
-                overflow-x: hidden;
-                overflow-y: auto;
             }
 
             .drawer-content.persistent.login{
