updated states loading from the database and adding states from the webapp works

--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -101,8 +101,8 @@
                 margin-top: 64px;
                 background-color: var(--secondary-background-color);
                 box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.3);
-                overflow-y: scroll;
-                -webkit-overflow-scrolling: touch;
+                /*overflow-y: scroll;*/
+                /*-webkit-overflow-scrolling: touch;*/
             }
 
             .drawer-toggle{
