added switch widget and fixed a bug in states to make it work

--- a/app/src/homecon-web-socket-object.html
+++ b/app/src/homecon-web-socket-object.html
@@ -31,6 +31,7 @@
                 path: {
                     type: String,
                     value: '',
+                    observer: '_pathChanged',
                 },
                 data: {
                     type: Object,
@@ -98,7 +99,11 @@
                     this.debounce('sendDataDebounce', this._sendData, this.debounce); 
                 }
             },
-
+            _pathChanged: function(path, oldpath){
+                if(this.auto && this.observe && window.homeconWebSocket.connected && !(path == '')){
+                    this.debounce('sendDataDebounce', this.send, this.debounce); 
+                }
+            },
         });
     </script>
 
