--- a/app/src/widgets/homecon-widget-switch.html
+++ b/app/src/widgets/homecon-widget-switch.html
@@ -40,7 +40,7 @@
         
         <homecon-web-socket-object auto id="websocketObject" event="state" path="[[config.path]]" data="{{value}}"></homecon-web-socket-object>
         
-        <paper-button noink class="button horizontal layout center" on-tap="call">
+        <paper-button noink class="button" on-tap="call">
             <img class="icon" src="/images/icon/[[color]]/[[parseIcon(config.icon)]].png">
             <div class="label">{{config.label}}</div>
         </paper-button>
