--- a/app/src/homecon-section.html
+++ b/app/src/homecon-section.html
@@ -1,14 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="../bower_components/iron-collapse/iron-collapse.html">
 
-<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
-<link rel="import" href="../bower_components/paper-menu/paper-menu.html">
-<link rel="import" href="../bower_components/paper-item/paper-item.html">
-
-<link rel="import" href="homecon-edit-dialog.html">
-
-<dom-module is="homecon-page-section">
+<dom-module is="homecon-section">
     <template>
         <style>
             :host{
@@ -62,65 +54,35 @@
             .hidden{
                 display: none !important;
             }
-            .edit{
-                position: absolute;
-                top: 0px;
-                right: 5px;
-                color: var(--primary-text-color);
-            }
-            .edit .collapsible{
-                color: var(--header-text-color);
-            }
         </style>
 
-        <homecon-web-socket-object id="websocket" event="pages_section" path="{{path}}" data="{{section}}" auto></homecon-web-socket-object>
-
-        <a id="header" class$="header {{_collapsibleClass(section.config.type)}} {{_openedClass(opened)}}" on-click="changeState">
-            {{section.config.title}}
+        <a id="header" class$="header {{_collapsibleClass(type)}} {{_openedClass(opened)}}" on-click="changeState">
+            {{title}}
         </a>
 
         <iron-collapse opened="{{opened}}">
-            <div id="content" class$="{{section.config.type}}">
+            <div id="content" class$="{{type}}">
                 <content></content>
             </div>
         </iron-collapse>
-        
-        <div class="edit" hidden="{{!edit}}">
-            <paper-icon-button class$="{{section.config.type}}" icon="editor:mode-edit" noink="true" on-click="openEditDialog"></paper-icon-button>
-        </div>
-
-        <homecon-edit-dialog id="editDialog" on-save="save">
-            <paper-dropdown-menu label="page section type">
-                <paper-menu class="dropdown-content" attr-for-selected="value" selected="{{newType}}">
-                    <paper-item value="collapsible">collapsible</paper-item>
-                    <paper-item value="raised">raised</paper-item>
-                    <paper-item value="transparent">transparent</paper-item>
-                </paper-menu>
-            </paper-dropdown-menu>
-            <paper-input label="Title:" value="{{newTitle}}"></paper-input>
-            <paper-button raised on-tap="delete">Delete</paper-button>
-        </homecon-edit-dialog>
 
     </template>
     <script>
         Polymer({
-            is: 'homecon-page-section',
+            is: 'homecon-section',
             properties: {
-                path: {
+                type: {
                     type: 'String',
+                    notify: true,
                 },
-                section: {
-                    type: 'Object',
+                title: {
+                    type: 'String',
                     notify: true,
                 },
                 opened:{
                     type: 'Boolean',
                     value: true,
                 },
-                edit:{
-                    type: 'Boolean',
-                    value: false,
-                }
             },
             changeState: function(){
                 this.opened = !this.opened;
@@ -130,27 +92,9 @@
                 this.newTitle = this.section.config.title;
                 this.$.editDialog.open();
             },
-            save: function(e){
-                /*
-                this.set('type',this.newType);
-                this.set('title',this.newTitle);
-                */
-                this.$.editDialog.close();
-            },
-            delete: function(){
-                this.fire('delete')
-            },
             _openedClass: function(opened){
                 if(opened){
                     return "opened"
-                }
-                else{
-                    return "";
-                }
-            },
-            _hiddenClass: function(x){
-                if(x){
-                    return "hidden"
                 }
                 else{
                     return "";
