--- a/app/src/homecon-pages-section.html
+++ b/app/src/homecon-pages-section.html
@@ -38,7 +38,7 @@
                 <paper-button raised noink="true" on-tap="addWidgetDialog">add widget</paper-button>
             </div>
 
-        <homecon-section>
+        </homecon-section>
         
         <div class="edit" hidden="{{!edit}}">
             <paper-icon-button class$="{{section.config.type}}" icon="editor:mode-edit" noink="true" on-click="openEditDialog"></paper-icon-button>
